syntax = "proto3";

package dispatched;

// Connector is the Server, and Dispatcher is the Client.
// Dispatcher will connect to Connector after pulling from the Registry.
service Dispatch {
    rpc DispatchMessage (stream DispatchRequest) returns (DispatchResponse);
}

message DispatchRequest {
    string user_id = 1;
    string message = 2;
}

message DispatchResponse {
    string status = 1;
}